# color_ai_api_project

./: .env  app.py  pyproject.toml
templates/: index.html
